# gol-rs-skeleton

./: Cargo.toml  README.md
benches/: bench.rs
controller/: Cargo.toml
controller/benches/: bench.rs
controller/src/: main.rs
controller/src/gol/: distributor.rs  io.rs  mod.rs
controller/src/sdl/: loop.rs
controller/src/util/: avgturns.rs
controller/tests/: count_test.rs  gol_test.rs  pgm_test.rs  sdl_test.rs  utils.rs
server/: Cargo.toml
server/src/: main.rs
src/: args.rs  lib.rs  main.rs
src/gol/: distributor.rs  event.rs  io.rs  mod.rs
src/sdl/: loop.rs  window.rs
src/util/: args.rs  averageturns.rs  avgturns.rs  cell.rs  logger.rs  mod.rs
tests/: count_test.rs  gol_test.rs  pgm_test.rs  sdl_test.rs  utils.rs
