[package]
name = "gol-rs"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
backtrace = "0.3"
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
csv = "1.3"
env_logger = "0.11"
flume = "0.11"
image = "0.24"
log = "0.4"
rayon = "1.8"
scopeguard = "1.2"
sdl2 = { version = "0.36", features = ["unsafe_textures"] }
serde = { version = "1.0", features = ["derive"]}
tokio = { version = "1.35", features = ["full"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
num_cpus = "1.16"

[[test]]
name = "gol"
path = "tests/gol_test.rs"
harness = false

[[test]]
name = "count"
path = "tests/count_test.rs"
harness = false

[[test]]
name = "pgm"
path = "tests/pgm_test.rs"
harness = false

[[test]]
name = "sdl"
path = "tests/sdl_test.rs"
harness = false

[[bench]]
name = "bench"
harness = false
