[package]
name = "gol-server"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
bytemuck = { version = "1.17", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
num-traits = "0.2"
prost = "0.13"
tokio = { version = "1.39", features = ["full"] }
tonic = "0.12"

[build-dependencies]
tonic-build = "0.12"
